--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,14 @@ form p {
   box-shadow: 0 5px 15px rgba(145, 92, 182, 0.4);
 }
 
+.testimonials{
+  
+  display: flex;
+  justify-content: space-around;
+  margin: 220px;
+}
+
+
 /* Waves */
 .waves {
   position: relative;
