--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,14 +28,17 @@ body {
 form input {
   min-width: 550px;
   min-height: 40px;
+  
 }
 /* Search Input Size */
 form {
   text-align: center;
+  margin-left: 100px;
 }
 
 form p {
   color: #413596;
+  
 }
 
 /* Button */
@@ -52,9 +55,8 @@ form p {
 }
 
 .testimonials{
-  
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin: 220px;
 }
 
@@ -108,6 +110,17 @@ form p {
   }
   h1 {
     font-size: 24px;
+  }
+
+  #userRating{
+    margin: 34px;
+    width: auto;
+   }
+
+  form{
+    text-align: center;
+    margin-bottom: 104px;
+    padding-right: 30px;
   }
 }
 
@@ -195,3 +208,18 @@ h3 {
   background-color: DodgerBlue !important;
   color: #ffffff;
 }
+
+/* User Ratings */
+.fa {
+  font-size: 25px;
+}
+
+.checked {
+  color: orange;
+}
+
+/*Shrinking for mobile*/
+/* @media (max-width: 768px) {
+
+
+} */
