--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,53 @@ h3 {
   color: #ffffff;
 }
 
+.card{
+  height: 100%;
+  background-color: rgb(205, 162, 211);
+  font-size: 2vh;
+  padding:2%;
+  overflow-y:auto;
+  margin:3%;
+  
+  
+  
+  
+}
+
+.field{
+  margin-top: 10vh;
+  
+  
+
+}
+
+
+.field2{
+
+margin-top: 2%;
+margin-bottom: 8vh;
+} 
+
+
+
+
+/* .card{
+  height: 50px;
+  display: flex;
+  margin-top:25px;
+  padding-bottom: 100px;
+}
+#urbanWeb{
+  position: fixed;
+  top:50px;
+  margin-bottom: 20vh;
+  border:30px;
+}
+#miriamWeb{
+  margin-top:40vh;
+  position: fixed;
+  border:30px;
+  bottom:40px;
 /* User Ratings */
 .fa {
   font-size: 25px;
