--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+html, body {
+  scroll-behavior: smooth;
+}
+
 /* Body */
 body {
   background: lightblue
@@ -57,9 +61,12 @@ form p {
 .testimonials{
   display: flex;
   justify-content: space-evenly;
-  margin: 220px;
+  margin: 20px;
 }
 
+#ratings{
+  padding-top:250px;     
+}
 
 /* Waves */
 .waves {
@@ -99,6 +106,18 @@ form p {
     transform: translate3d(85px, 0, 0);
   }
 }
+
+
+/* User Ratings */
+.fa {
+  font-size: 25px;
+}
+
+.checked {
+  color: orange;
+}
+
+
 /*Shrinking for mobile*/
 @media (max-width: 768px) {
   .waves {
@@ -116,6 +135,8 @@ form p {
     margin: 34px;
     width: auto;
    }
+
+  
 
   form{
     text-align: center;
