--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,28 +229,20 @@ h3 {
 }
 
 .card{
-  height: 100%;
   background-color: rgb(205, 162, 211);
   font-size: 2vh;
   padding:2%;
-  overflow-y:auto;
+  overflow-y: scroll;
   margin:3%;
-  
-  
-  
-  
+  height: 35vh;
 }
 
 .field{
   margin-top: 10vh;
-  
-  
-
 }
 
 
 .field2{
-
 margin-top: 2%;
 margin-bottom: 8vh;
 } 
