--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,6 +231,14 @@ h3 {
   color: #ffffff;
 }
 
+.card{
+  background-color: rgb(205, 162, 211);
+  font-size: 2vh;
+  padding:2%;
+  overflow-y: scroll;
+  margin:3%;
+  height: 35vh;
+}
 
 .field{
   margin-top: 10vh;
