--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,7 @@
-
 /* Body */
 body {
-  background: lightblue
-    url("https://developer.spotify.com/images/home/tile-1-alt-bg.jpg") no-repeat
-    fixed center;
-   
+  background: lightblue url("/assets/images/jumbotron-1.jpeg") no-repeat fixed
+    center;
 }
 
 .navbar-item .header-logo {
@@ -14,9 +11,7 @@ body {
   width: 135px;
 }
 
-
-
-/*Titile  */
+/* Title */
 #urbCi {
   padding-left: 80px;
   margin-top: 100px;
@@ -26,7 +21,6 @@ body {
 form input {
   min-width: 550px;
   min-height: 40px;
-  
 }
 /* Search Input Size */
 form {
@@ -35,9 +29,7 @@ form {
 }
 
 form p {
-  
   color: #413596;
-  
 }
 
 /* Button */
@@ -53,19 +45,18 @@ form p {
   box-shadow: 0 5px 15px rgba(145, 92, 182, 0.4);
 }
 
-.testimonials{
+.testimonials {
   display: flex;
   justify-content: space-evenly;
   margin: 20px;
 }
 
-#ratings{
-  padding-top:250px; 
-   
+#ratings {
+  padding-top: 250px;
 }
 
-#aboutUs{
-  padding-top:150px; 
+#aboutUs {
+  padding-top: 150px;
 }
 
 /* Waves */
@@ -107,7 +98,6 @@ form p {
   }
 }
 
-
 /* User Ratings */
 .fa {
   font-size: 25px;
@@ -116,7 +106,6 @@ form p {
 .checked {
   color: orange;
 }
-
 
 /*Shrinking for mobile*/
 @media (max-width: 768px) {
@@ -131,14 +120,12 @@ form p {
     font-size: 24px;
   }
 
-  #userRating{
+  #userRating {
     margin: 34px;
     width: auto;
-   }
+  }
 
-  
-
-  form{
+  form {
     text-align: center;
     margin-bottom: 104px;
     padding-right: 30px;
@@ -158,12 +145,11 @@ form p {
 }
 
 .typing-demo {
-  width: 39ch;
+  width: 34ch;
   animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
   border-right: 3px solid;
-  /* font-family: roboto; */
   font-size: 1.25em;
   text-align: center;
 }
@@ -231,29 +217,27 @@ h3 {
   color: #ffffff;
 }
 
-.card{
+.card {
   background-color: rgb(205, 162, 211);
   font-size: 2vh;
-  padding:2%;
+  padding: 2%;
   overflow-y: scroll;
-  margin:3%;
+  margin: 3%;
   height: 35vh;
 }
 
-.field{
+.field {
   margin-top: 10vh;
 }
 
-
-.field2{
-margin-top: 2%;
-margin-bottom: 8vh;
-} 
-
-li{
-  list-style-type: circle;
+.field2 {
+  margin-top: 2%;
+  margin-bottom: 8vh;
 }
 
+li {
+  list-style-type: circle;
+}
 
 .fa {
   font-size: 25px;
@@ -262,5 +246,3 @@ li{
 .checked {
   color: orange;
 }
-
-
